Update ktlint and format code